--- a/free-nodes/2025-9-19-free-subscribe-node.htm
+++ b/free-nodes/2025-9-19-free-subscribe-node.htm
@@ -259,16 +259,16 @@ Google Scholar、PubMed、ResearchGate及开放获取期刊是获取免费文献
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-high-speed-nodes.htm" title="免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享">免费Clash SSR - 9月14日22.3M/S|免费Shadowrocket/SSR/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-143964.htm" title="科学上网新选择：Clash节点购买与配置终极指南">科学上网新选择：Clash节点购买与配置终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
+                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-v2ray.htm" title="免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-142523.htm" title="深度剖析V2Ray封IP现象：成因解析与高级规避策略">深度剖析V2Ray封IP现象：成因解析与高级规避策略</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-155058.htm" title="全面解析电脑科学上网APP：原理、选择与安全使用指南">全面解析电脑科学上网APP：原理、选择与安全使用指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-152871.htm" title="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南">翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/news/article-145051.htm" title="彻底解决vmess连接问题：从诊断到修复的完整指南">彻底解决vmess连接问题：从诊断到修复的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -280,7 +280,7 @@ Google Scholar、PubMed、ResearchGate及开放获取期刊是获取免费文献
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -315,7 +315,7 @@ Google Scholar、PubMed、ResearchGate及开放获取期刊是获取免费文献
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                                免费Clash SSR 机场订阅官网 版权所有
+                                                    免费Clash SSR 机场订阅官网 版权所有
                                 <br />
                                 Powered by WordPress
                                 </p>
