--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -137,6 +137,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-22-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/3632c734aaea8d83684bbb1178b44c3b.webp" alt="免费Clash SSR - 9月22日22.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-22-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 9月22日22.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、日本、加拿大、美国、新加坡、香港、欧洲等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-21-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/89df7d5f1d1d06955b7a34df1ca4e644.webp" alt="免费Clash SSR - 9月21日19.4M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-21-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 9月21日19.4M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、韩国、欧洲、香港、新加坡、日本、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-20">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-20-node-share-links.htm" class="xcblog-blog-url">
@@ -249,36 +277,8 @@
                                 <p>这一次的节点更新覆盖了欧洲、加拿大、日本、新加坡、美国、香港、韩国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-12">
-                            <div class="col-md-3">
-                                <a href="/news/article-155058.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="全面解析电脑科学上网APP：原理、选择与安全使用指南" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-155058.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        全面解析电脑科学上网APP：原理、选择与安全使用指南                                    </h3>
-                                </a>
-                                <p>引言：数字时代的"网络通行证"  在信息全球化的今天，互联网已成为人们获取知识、交流思想的重要渠道。然而，由于各种原因，某些地区可能对特定网络内容进行限制，这使得"科学上网"工具应运而生。电脑科学上网</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-11">
-                            <div class="col-md-3">
-                                <a href="/news/article-154698.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240825-1/882ee8810af2265fc981e697f5d3716a.webp" alt="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-154698.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略                                    </h3>
-                                </a>
-                                <p>在当今互联网环境中，网络限制和隐私安全问题日益突出，许多用户寻求高效、安全的代理工具来突破地域限制或保护个人数据。作为iOS平台上广受欢迎的代理客户端，Shadowrocket凭借其强大的功能和灵活的</p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-09/page-2.htm">2</a></li> <li><a href="/date/2025-09/page-2.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-09/page-2.htm">2</a></li><li><a href="/date/2025-09/page-3.htm">3</a></li> <li><a href="/date/2025-09/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-16-node-share-links.htm" title="免费Clash SSR - 9月16日20.8M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 9月16日20.8M/S|免费V2ray/SSR/Clash/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-152508.htm" title="探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置">探索网络自由之门：全方位掌握Clash免费网站的使用、安装与配置</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-24-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 8月24日22.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-144688.htm" title="突破网络藩篱：科学上网软件全攻略与深度解析">突破网络藩篱：科学上网软件全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-v2ray.htm" title="免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
                         <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
-                        <li class="py-2"><a href="/news/article-153605.htm" title="苹果设备上的Vmess协议全攻略：从下载到配置的完整指南">苹果设备上的Vmess协议全攻略：从下载到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket/Clash/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 9月2日20.1M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash/SSR/Shadowrocket/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -308,7 +308,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -343,7 +343,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                                免费Clash SSR 机场订阅官网 版权所有
+                                                    免费Clash SSR 机场订阅官网 版权所有
                                 <br />
                                 Powered by WordPress
                                 </p>
