--- a/client.htm
+++ b/client.htm
@@ -302,16 +302,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146146.htm" title="跨越数字边界：科学上网的技术原理与全球互联网自由探索">跨越数字边界：科学上网的技术原理与全球互联网自由探索</a></li>
+                        <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-28-free-v2ray.htm" title="免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-27-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 9月27日19.1M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 9月27日19.1M/S|免费Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-152871.htm" title="翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南">翻墙利器深度评测：大狗与大狗v2ray全方位对比与实战指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-v2ray.htm" title="免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享">免费Clash SSR - 9月15日18.9M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-142161.htm" title="Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析">Switch如何通过V2Ray实现网络加速？完整配置指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-node-subscribe-links.htm" title="免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅分享">免费Clash SSR - 9月3日19.4M/S|免费Shadowrocket节点/V2ray节点/Clash节点/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-node-share-links.htm" title="免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-high-speed-nodes.htm" title="免费Clash SSR - 9月17日22.6M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月17日22.6M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-152136.htm" title="利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南">利用80端口部署V2Ray实现隐秘高速科学上网：全流程配置与实战指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-node-share-links.htm" title="免费Clash SSR - 8月30日22.3M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash节点订阅分享">免费Clash SSR - 8月30日22.3M/S|免费V2ray节点/Shadowrocket节点/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
                     </ul>
     </div>
 </div>
@@ -322,6 +322,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
