--- a/date/2025-09/page-3.htm
+++ b/date/2025-09/page-3.htm
@@ -287,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-143241.htm" title="酷安平台对科学上网工具的屏蔽机制与突破策略深度解析">酷安平台对科学上网工具的屏蔽机制与突破策略深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-143592.htm" title="安卓版Clash终极指南：从零开始掌握高效代理工具">安卓版Clash终极指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-node-share-links.htm" title="免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket节点订阅分享">免费Clash SSR - 8月29日20.3M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray节点订阅分享">免费Clash SSR - 9月1日20.4M/S|免费SSR/Shadowrocket节点/Clash节点/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-free-node-subscribe-links.htm" title="免费Clash SSR - 8月26日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 8月26日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-v2ray.htm" title="免费Clash SSR - 8月31日20.4M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 8月31日20.4M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-141155.htm" title="掌握Quantumult节点测试：提升科学上网体验的终极指南">掌握Quantumult节点测试：提升科学上网体验的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-v2ray.htm" title="免费Clash SSR - 8月21日22.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 8月21日22.8M/S|免费V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share-links.htm" title="免费Clash SSR - 8月25日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享">免费Clash SSR - 8月25日18.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-free-node-subscribe-links.htm" title="免费Clash SSR - 9月18日19M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享">免费Clash SSR - 9月18日19M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-141443.htm" title="突破网络边界：科学上网与国内翻墙的终极生存指南">突破网络边界：科学上网与国内翻墙的终极生存指南</a></li>
                         <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
-                        <li class="py-2"><a href="/news/article-146514.htm" title="深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验">深度解析 Clash Magisk 模块：解锁安卓系统级代理的全新体验</a></li>
                     </ul>
     </div>
 </div>
@@ -307,6 +307,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
