--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -165,16 +165,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-v2ray.htm" title="免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 9月28日23M/S|免费Shadowrocket节点/Clash节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-146879.htm" title="解锁网络自由：详解Shadowrocket配置分享全攻略">解锁网络自由：详解Shadowrocket配置分享全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
                         <li class="py-2"><a href="/news/article-142881.htm" title="突破网络藩篱：手机科学上网的终极指南与实用技巧">突破网络藩篱：手机科学上网的终极指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="免费Clash SSR - 8月28日19.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray节点订阅分享">免费Clash SSR - 8月28日19.3M/S|免费Clash节点/Shadowrocket节点/SSR/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-subscribe-node.htm" title="免费Clash SSR - 9月21日19.4M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket节点订阅分享">免费Clash SSR - 9月21日19.4M/S|免费Clash节点/SSR/V2ray节点/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-154332.htm" title="深度解析：Shadowrocket无法连接的全面诊断与高效修复指南">深度解析：Shadowrocket无法连接的全面诊断与高效修复指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-24-node-share-links.htm" title="免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 9月24日18.4M/S|免费SSR节点/Clash节点/Shadowrocket节点/Singbox节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-154698.htm" title="Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略">Shadowrocket免费账号获取与使用完全指南：解锁网络自由的全方位攻略</a></li>
-                        <li class="py-2"><a href="/news/article-147246.htm" title="全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙">全面解读 Shadowrocket 在韩国的使用与配置：解锁数字自由的关键钥匙</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-v2ray.htm" title="免费Clash SSR - 9月22日22.9M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket节点订阅分享">免费Clash SSR - 9月22日22.9M/S|免费SSR/V2ray节点/Clash节点/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-145418.htm" title="Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧">Surfboard V2Ray 完全指南：从零开始掌握安全翻墙的核心技巧</a></li>
-                        <li class="py-2"><a href="/news/article-144688.htm" title="突破网络藩篱：科学上网软件全攻略与深度解析">突破网络藩篱：科学上网软件全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-subscribe-node.htm" title="免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享">免费Clash SSR - 8月27日20.5M/S|免费Shadowrocket节点/SSR/Clash节点/V2ray节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-144324.htm" title="突破网络限制：全方位科学上网访问Google Store终极指南">突破网络限制：全方位科学上网访问Google Store终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-153962.htm" title="在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案">在CentOS 6上搭建V2Ray代理：一份面向老旧系统的完整解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-145774.htm" title="战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智">战棋艺术的狂欢：《Clash Mini》如何用策略征服玩家心智</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-node-share-links.htm" title="免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享">免费Clash SSR - 9月20日19.1M/S|免费Clash节点/SSR/Shadowrocket节点/V2ray节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -185,6 +185,9 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
